deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go
  labels:
    app: hello-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-go
  template:
    metadata:
      labels:
        app: hello-go
    spec:
      containers:
        - name: hello-go
          image: danilokoda/hello-go:v5.6
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 1
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 1
          volumeMounts:
            - mountPath: /go/myfamily
              name: config
      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: family.txt
