service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
spec:
  selector:
    app: hello-go
  type:
    LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
