ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
    - host: "ingress.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hello-go
                port:
                  number: 8080
